# textfield-recognition

./: .gitignore  pyproject.toml  requirements.txt  server.py
.devcontainer/: devcontainer.json
idrec/: barcode.py  recognition.py  request.py  requirements.txt  server.py
