[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "idrec"
requires-python = ">= 3.10"
authors = [{name="Giorgio Mariani", email="giorgiomariani94@gmail.com"}]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy",
    "pandas",
    "gradio",
    "click",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "pytest>=6.0.0",
]

[tool.setuptools]
packages = ["idrec"]
